--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body class="styleguide">
+
+<div class="logo">
+	<img src="logo.svg" alt="Prolific Digital">
+</div>
 	
 <div id="intro" class="block hero style-1">
 	<div id="particles-js"></div>
