--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -4,12 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="/favicon.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<script src="https://kit.fontawesome.com/622c73cffb.js" crossorigin="anonymous"></script>
 	<title>Prolific Digital</title>
 </head>
 
-<body class="styleguide">
+<body>
 
 <div class="logo">
 	<img src="logo.svg" alt="Prolific Digital">
